--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-04-12  Mike Massonnet <mmassonnet@xfce.org>
+
+    * lv.po: Update Latvian translation (Rihards Prieditis <rprieditis@gmail.com>)
+
 2008-02-22	Mike Massonnet <mmassonnet@xfce.org>
 
 	* LINGUAS, ur.po: Merge Urdu translation from trunk (r26296)
