--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-04-21  Og Maciel <ogmaciel@gnome.org>
+
+    * pt_BR.po: Updated Brazilian Portuguese translation.
+
 2008-04-12  Mike Massonnet <mmassonnet@xfce.org>
 
     * lv.po: Update Latvian translation (Rihards Prieditis <rprieditis@gmail.com>)
