--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2008-04-27	Mike Massonnet <mmassonnet@xfce.org>
+
+	* ku.po, LINGUAS: Add Kurdish translation (Erdal Ronahi
+					<erdal.ronahi@gmail.com>)
+
 2008-04-21  Og Maciel <ogmaciel@gnome.org>
 
     * pt_BR.po: Updated Brazilian Portuguese translation.
