Basque translation update
(Old svn revision: 26922)

--- a/po/eu.po
+++ b/po/eu.po
@@ -4,15 +4,15 @@
 # This file is distributed under the same license as the xfce4-panel package.
 #
 # Jon Latorre Martinez <patataman@airtel.net>, 2003.
-# Piarres Beobide Egaña <pi@beobide.net>, 2004, 2005, 2006, 2007.
+# Piarres Beobide Egaña <pi@beobide.net>, 2004, 2005, 2006, 2007, 2008.
 msgid ""
 msgstr ""
 "Project-Id-Version: eu\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-12-12 12:57+0100\n"
-"PO-Revision-Date: 2007-12-07 11:35+0100\n"
+"PO-Revision-Date: 2008-05-02 23:12+0200\n"
 "Last-Translator: Piarres Beobide <pi@beobide.net>\n"
-"Language-Team: Euskara <Librezale@librezale.org>\n"
+"Language-Team: Euskara <debian-l10n-basque@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -21,11 +21,11 @@ msgstr ""
 
 #: ../config/launcher-7.rc.in.h:1
 msgid "Command Prompt"
-msgstr "Komando Lerroa"
+msgstr "Komando lerroa"
 
 #: ../config/launcher-7.rc.in.h:2
 msgid "X terminal emulator"
-msgstr "X terminal emiladorea"
+msgstr "X terminal emuladorea"
 
 #: ../config/launcher-8.rc.in.h:1
 msgid "Edit text files"
@@ -41,7 +41,7 @@ msgstr "Fitxategi kudeatzailea"
 
 #: ../config/launcher-9.rc.in.h:2
 msgid "Manage files and folders"
-msgstr "Fixtategi eta karpetak kudeatu"
+msgstr "Fitxategi eta karpetak kudeatu"
 
 #: ../config/launcher-10.rc.in.h:1
 msgid "Surf the internet"
@@ -60,11 +60,10 @@ msgstr "Elementu bat espero gabe ezabatua izan da: \"%s\"."
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:606
 #, c-format
 msgid "Remove \"%s\"?"
-msgstr "\"%s\" Ezabatu?"
+msgstr "\"%s\" ezabatu?"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:620
-msgid ""
-"The item will be removed from the panel and its configuration will be lost."
+msgid "The item will be removed from the panel and its configuration will be lost."
 msgstr ""
 "Elementu hau paneletik ezabatua izango da eta bere konfigurazioa galdu "
 "egingo da."
@@ -90,16 +89,16 @@ msgstr "Kendu"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:902
 msgid "Add New Item"
-msgstr "Elementu Berria Gehitu"
+msgstr "Elementu berria gehitu"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:913 ../panel/panel.c:694
 #: ../mcs-plugin/xfce4-panel-manager.desktop.in.h:1
 msgid "Customize Panel"
-msgstr "Panela Pertsonalizatu"
+msgstr "Panela pertsonalizatu"
 
 #: ../panel/panel.c:705
 msgid "Add Items"
-msgstr "Elementuak Gehitu"
+msgstr "Elementuak gehitu"
 
 #: ../panel/panel.c:721 ../plugins/actions/actions.c:286
 #: ../plugins/actions/actions.c:320 ../plugins/actions/actions.c:458
@@ -112,15 +111,15 @@ msgstr "Berrabiarazi"
 
 #: ../panel/panel.c:745
 msgid "About the Xfce Panel"
-msgstr "Xfce Panela-ri buruz"
+msgstr "Xfce panela-ri buruz"
 
 #: ../panel/panel-app.c:258 ../panel/panel-app.c:892
 msgid "Exit Xfce Panel?"
-msgstr "Xfce Panela Itxi?"
+msgstr "Xfce panela itxi?"
 
 #: ../panel/panel-app.c:890 ../panel/panel-app.c:922 ../panel/panel-app.c:955
 msgid "Xfce Panel"
-msgstr "Xfce Panela"
+msgstr "Xfce panela"
 
 #: ../panel/panel-app.c:893
 msgid "You can't remove the last panel. Would you like to exit the program?"
@@ -129,7 +128,7 @@ msgstr "Ezin duzu azken panela ezabatu. Agian programatik irten nahi duzu?"
 #: ../panel/panel-app.c:920
 #, c-format
 msgid "Remove Panel \"%d\"?"
-msgstr "\"%d\" Panela Ezabatu?"
+msgstr "\"%d\" panela ezabatu?"
 
 #: ../panel/panel-app.c:924
 msgid "The selected panel and all its items will be removed."
@@ -182,7 +181,7 @@ msgstr "Xfce garapen taldea. Eskubide guztiak erreserbaturik."
 #: ../panel/main.c:104
 #, c-format
 msgid "Please report bugs to <%s>."
-msgstr "Mesedez programa erroreeen berri <%s>-n eman"
+msgstr "Mesedez programa erroreen berri <%s>-n eman"
 
 #: ../panel/main.c:148
 msgid "xfce4-panel already running"
@@ -196,7 +195,7 @@ msgstr "xfce4-panel berrabiarazten..."
 #: ../panel/panel-dialogs.c:189
 #, c-format
 msgid "Could not open \"%s\" module"
-msgstr "Ezin da \"%s\" modulua ireki."
+msgstr "Ezin da \"%s\" modulua ireki"
 
 #: ../panel/panel-dialogs.c:634
 msgid "Add Items to the Panel"
@@ -375,7 +374,7 @@ msgstr "24 _orduko ordularia erabili"
 
 #: ../plugins/clock/clock-dialog.c:427
 msgid "Fl_ash time separators"
-msgstr ""
+msgstr "Fl_ash ordu bereizelak"
 
 #: ../plugins/clock/clock-dialog.c:433
 msgid "Sho_w AM/PM"
@@ -465,15 +464,15 @@ msgstr "Aplikazio bat Hautatu:"
 
 #: ../plugins/launcher/launcher-dialog.c:651
 msgid "All Files"
-msgstr "Fixtategi Guztiak"
+msgstr "Fitxategi guztiak"
 
 #: ../plugins/launcher/launcher-dialog.c:656
 msgid "Executable Files"
-msgstr "Fixatetgi exekutagarriak"
+msgstr "Fitxategi exekutagarriak"
 
 #: ../plugins/launcher/launcher-dialog.c:671
 msgid "Perl Scripts"
-msgstr "Pero Script-ak"
+msgstr "Perl Script-ak"
 
 #: ../plugins/launcher/launcher-dialog.c:677
 msgid "Python Scripts"
@@ -495,7 +494,7 @@ msgstr "Ezezaguna"
 #: ../plugins/launcher/launcher-dialog.c:764
 #, c-format
 msgid "Select an Icon for \"%s\""
-msgstr "Hauatatu ikono bat \"%s\"-entzat"
+msgstr "Hautatu ikono bat \"%s\"-entzat"
 
 #. build name
 #: ../plugins/launcher/launcher-dialog.c:842
@@ -571,11 +570,11 @@ msgstr "Idazmahai izenak bistarazi"
 #: ../plugins/separator/separator.c:409
 #: ../plugins/separator/separator.desktop.in.in.h:2
 msgid "Separator or Spacing"
-msgstr "Bereizlea edo Lekua"
+msgstr "Bereizlea edo lekua"
 
 #: ../plugins/separator/separator.c:430
 msgid "Separator Style"
-msgstr "Bereizle Estiloa"
+msgstr "Bereizle estiloa"
 
 #. space
 #: ../plugins/separator/separator.c:437
@@ -584,7 +583,7 @@ msgstr "L_eku librea"
 
 #: ../plugins/separator/separator.c:446
 msgid "_Expanding Empty Space"
-msgstr "L_eku Librea Hedatzen"
+msgstr "L_eku librea hedatzen"
 
 #: ../plugins/separator/separator.c:455
 msgid "_Line"
@@ -621,23 +620,21 @@ msgstr "Pantaila honetan sistema barra bat martxan dago"
 #. message
 #: ../plugins/systray/xfce-tray-plugin.c:219
 msgid "The tray manager lost selection"
-msgstr ""
+msgstr "Barra kudeatzaileak hautapena galtzen du"
 
 #: ../plugins/systray/xfce-tray-dialogs.c:280
-#, fuzzy
 msgid "Are you sure you want to clear the list of known applications?"
-msgstr "Ziur al zaude '%s' idazmahaia ezabatu nahi duzula?"
+msgstr "Ziur al zaude aplikazio ezagunen zerrenda ezabatu nahi duzula?"
 
 #. number of rows
 #: ../plugins/systray/xfce-tray-dialogs.c:374
-#, fuzzy
 msgid "_Number of rows:"
-msgstr "Lerro kopurua:"
+msgstr "_Lerro kopurua:"
 
 #. applications
 #: ../plugins/systray/xfce-tray-dialogs.c:389
 msgid "Hidden Applications"
-msgstr "Ezkutatutako Aplikazioak"
+msgstr "Ezkutatutako aplikazioak"
 
 #: ../plugins/systray/xfce-tray-manager.c:431
 #, c-format
@@ -652,7 +649,7 @@ msgstr "Zeregin zerrenda"
 
 #: ../plugins/tasklist/tasklist-dialogs.c:174
 msgid "Minimum Width:"
-msgstr "Gutxieneko Zabalera:"
+msgstr "Gutxieneko zabalera:"
 
 #: ../plugins/tasklist/tasklist-dialogs.c:194
 msgid "Use flat buttons"
@@ -660,11 +657,11 @@ msgstr "Botoi mugikorrak erabili"
 
 #: ../plugins/tasklist/tasklist-dialogs.c:200
 msgid "Show handle"
-msgstr "Kudeatzailea Bistarazi"
+msgstr "Ikusi kudeatzailea"
 
 #: ../plugins/tasklist/tasklist-dialogs.c:212
 msgid "Show tasks from _all workspaces"
-msgstr "Bistarazi idazmahai birtual guztien lanak"
+msgstr "Ikusi idazmahai birtual guztien l_anak"
 
 #. keep order in sync with WnckTasklistGroupingType
 #: ../plugins/tasklist/tasklist-dialogs.c:222
@@ -677,7 +674,7 @@ msgstr "Automatikoki taldekatu lanak"
 
 #: ../plugins/tasklist/tasklist-dialogs.c:224
 msgid "Always group tasks"
-msgstr "Beti _taldekatu lanak"
+msgstr "Beti taldekatu lanak"
 
 #: ../plugins/windowlist/windowlist.c:263
 #, c-format
@@ -692,7 +689,7 @@ msgstr "Ziur al zaude '%s' idazmahaia ezabatu nahi duzula?"
 #: ../plugins/windowlist/windowlist.c:477
 #, c-format
 msgid "Workspace %d"
-msgstr "%d Idazmahai"
+msgstr "%d Idazmahaia"
 
 #: ../plugins/windowlist/windowlist.c:592
 #: ../plugins/windowlist/windowlist.c:598
@@ -702,19 +699,19 @@ msgstr "Idazmahai gehitu"
 #: ../plugins/windowlist/windowlist.c:617
 #, c-format
 msgid "Remove Workspace %d"
-msgstr "%d Idazmahai Ezabatu"
+msgstr "%d Idazmahaia ezabatu"
 
 #: ../plugins/windowlist/windowlist.c:618
 #, c-format
 msgid "Remove Workspace '%s'"
-msgstr "'%s' Idazmahai Ezabatu"
+msgstr "'%s' Idazmahaia ezabatu"
 
 #. Windowlist Settings
 #: ../plugins/windowlist/windowlist-dialog.c:121
 #: ../plugins/windowlist/windowlist-dialog.c:212
 #: ../plugins/windowlist/windowlist.desktop.in.in.h:2
 msgid "Window List"
-msgstr "Leiho Zerrenda"
+msgstr "Leiho zerrenda"
 
 #: ../plugins/windowlist/windowlist-dialog.c:150
 msgid ""
@@ -727,7 +724,7 @@ msgstr ""
 #. Button Urgency Notification
 #: ../plugins/windowlist/windowlist-dialog.c:157
 msgid "Urgency Notification"
-msgstr "Larrialdiko Berri-ematea"
+msgstr "Larrialdiko berri-ematea"
 
 #: ../plugins/windowlist/windowlist-dialog.c:164
 msgid "_Disabled"
@@ -743,7 +740,7 @@ msgstr "Idazmahai _guztiontzat"
 
 #: ../plugins/windowlist/windowlist-dialog.c:196
 msgid "_Icon button"
-msgstr "_Ikono Botoia"
+msgstr "_Ikono botoia"
 
 #: ../plugins/windowlist/windowlist-dialog.c:203
 msgid "A_rrow button"
@@ -771,7 +768,7 @@ msgstr "Panela"
 
 #: ../plugins/actions/actions.desktop.in.in.h:1
 msgid "Action Buttons"
-msgstr "Ekintza Botoiak"
+msgstr "Ekintza botoiak"
 
 #: ../plugins/actions/actions.desktop.in.in.h:2
 msgid "Log out or lock the screen"
@@ -803,11 +800,11 @@ msgstr "Panel elementuen artean lekua edo lerro bat gehitu"
 
 #: ../plugins/showdesktop/showdesktop.desktop.in.in.h:1
 msgid "Show Desktop"
-msgstr "Idazmahaia bitarazi"
+msgstr "Ikusi idazmahaia"
 
 #: ../plugins/showdesktop/showdesktop.desktop.in.in.h:2
 msgid "Toggle desktop show/hide"
-msgstr "Idazmahai ezkutatu/bistarazi txandakatu"
+msgstr "Txandakatu idazmahai ezkutatu/bistarazi"
 
 #: ../plugins/systray/systray.desktop.in.in.h:1
 msgid "Show notification icons"
@@ -823,7 +820,5 @@ msgstr "Leiho erabilgarri zerrenda bistarazi"
 
 #: ../mcs-plugin/xfce4-panel-manager.desktop.in.h:3
 msgid "Xfce 4 Panel Manager"
-msgstr "Xfce 4 Panel Kudeatzailea:"
+msgstr "Xfce 4 panel kudeatzailea"
 
-#~ msgid "Failed to register the system tray for screen %d"
-#~ msgstr "Huts %d pantailaren sistema-barra erregistratzerakoan"
