--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-05-03	Piarres Beobide <pi@beobide.net>
+
+	* eu.po: Updated Basque translation
+
 2008-04-27	Mike Massonnet <mmassonnet@xfce.org>
 
 	* ku.po, LINGUAS: Add Kurdish translation (Erdal Ronahi
