Updated Brazilian Portuguese translation.
(Old svn revision: 26931)

--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -35,7 +35,7 @@ msgstr "Editor"
 
 #: ../config/launcher-9.rc.in.h:1
 msgid "File Manager"
-msgstr "Gerente de Arquivos"
+msgstr "Gerenciador de Arquivos"
 
 #: ../config/launcher-9.rc.in.h:2
 msgid "Manage files and folders"
@@ -358,7 +358,7 @@ msgstr "Novo Painel"
 #: ../panel/panel-dialogs.c:1716
 #: ../mcs-plugin/xfce4-panel-manager.desktop.in.h:2
 msgid "Panel Manager"
-msgstr "Gerente do Painel"
+msgstr "Gerenciador do Painel"
 
 #: ../plugins/actions/actions.c:267
 #: ../plugins/actions/actions.c:303
@@ -641,7 +641,7 @@ msgstr "Há uma bandeja de sistema sendo executada nesta tela"
 #. message
 #: ../plugins/systray/xfce-tray-plugin.c:219
 msgid "The tray manager lost selection"
-msgstr "O gerente da bandeja perdeu a seleção"
+msgstr "O gerenciador da bandeja perdeu a seleção"
 
 #: ../plugins/systray/xfce-tray-dialogs.c:280
 msgid "Are you sure you want to clear the list of known applications?"
@@ -660,7 +660,7 @@ msgstr "Aplicações ocultas"
 #: ../plugins/systray/xfce-tray-manager.c:431
 #, c-format
 msgid "Failed to acquire manager selection for screen %d"
-msgstr "Falha ao obter a seleção do gerente para a tela %d"
+msgstr "Falha ao obter a seleção do gerenciador para a tela %d"
 
 #: ../plugins/tasklist/tasklist-dialogs.c:143
 #: ../plugins/tasklist/tasklist-dialogs.c:209
@@ -837,7 +837,7 @@ msgstr "Mostrar lista de todas as janelas disponíveis"
 
 #: ../mcs-plugin/xfce4-panel-manager.desktop.in.h:3
 msgid "Xfce 4 Panel Manager"
-msgstr "Gerente do Painel do Xfce 4"
+msgstr "Gerenciador do Painel do Xfce 4"
 
 #, fuzzy
 #~ msgid "Failed to register the system tray for screen %d"
