--- a/po/sk.po
+++ b/po/sk.po
@@ -367,7 +367,6 @@ msgid "Digital"
 msgstr "Digitálne"
 
 #: ../plugins/clock/clock.c:510
-#, fuzzy
 msgid "LED"
 msgstr "LCD"
 
@@ -384,12 +383,10 @@ msgid "Use 24-_hour clock"
 msgstr "Použiť 24-_hodinový čas"
 
 #: ../plugins/clock/clock.c:537
-#, fuzzy
 msgid "Show AM/PM"
 msgstr "_Zobraziť Dopoludnia/Popoludní"
 
 #: ../plugins/clock/clock.c:544
-#, fuzzy
 msgid "Display seconds"
 msgstr "Zobraziť _sekundy"
 
@@ -411,7 +408,7 @@ msgid "Use all available space"
 msgstr "Použiť všetok dostupný priestor"
 
 #: ../plugins/launcher/launcher.c:373 ../plugins/launcher/launcher.c:435
-#, fuzzy, c-format
+#, c-format
 msgid "Could not run \"%s\""
 msgstr "Nedá sa otvoriť modul \"%s\""
 
@@ -494,12 +491,10 @@ msgid "Select command"
 msgstr "Zvoľte príkaz"
 
 #: ../plugins/launcher/launcher-dialog.c:482
-#, fuzzy
 msgid "Name"
 msgstr "_Názov"
 
 #: ../plugins/launcher/launcher-dialog.c:500
-#, fuzzy
 msgid "Description"
 msgstr "_Popis"
 
@@ -508,7 +503,6 @@ msgid "Other..."
 msgstr "Ďalšie..."
 
 #: ../plugins/launcher/launcher-dialog.c:653
-#, fuzzy
 msgid "Command"
 msgstr "P_ríkaz"
 
@@ -711,7 +705,7 @@ msgstr "Tlačidlá s _ikonami"
 
 #: ../plugins/windowlist/windowlist-dialog.c:203
 msgid "A_rrow button"
-msgstr "Tlačidlo so šípkou"
+msgstr "_Tlačidlo so šípkou"
 
 #: ../plugins/windowlist/windowlist-dialog.c:221
 msgid "Show _windows from all workspaces"
@@ -719,7 +713,7 @@ msgstr "Zobraziť okná zo všetkých _plôch"
 
 #: ../plugins/windowlist/windowlist-dialog.c:230
 msgid "Show a_pplication icons"
-msgstr "Zobraziť ikony aplikácií"
+msgstr "Zobraziť _ikony aplikácií"
 
 #: ../plugins/windowlist/windowlist-dialog.c:239
 msgid "Show wor_kspace actions"
