* Update Turkish translation
(Old svn revision: 26993)

--- a/po/tr.po
+++ b/po/tr.po
@@ -1,15 +1,16 @@
+# translation of tr.po to Turkish
 # Turkish translations for xfce4-panel package.
 # Copyright (C) 2002-2006 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
 #
 # Erçin EKER <ercin.eker@linux.org.tr>, 2004.
-# Eren Türkay <turkay.eren@gmail.com>, 2007.
+# Eren Türkay <turkay.eren@gmail.com>, 2007, 2008.
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4-panel 4.4.0\n"
+"Project-Id-Version: tr\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-12-12 12:57+0100\n"
-"PO-Revision-Date: 2007-11-03 07:40+0200\n"
+"PO-Revision-Date: 2008-05-27 10:23+0300\n"
 "Last-Translator: Eren Türkay <turkay.eren@gmail.com>\n"
 "Language-Team: Turkish <turkce@pardus.org.tr>\n"
 "MIME-Version: 1.0\n"
@@ -61,8 +62,7 @@ msgid "Remove \"%s\"?"
 msgstr "\"%s\" öğesini kaldır?"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:620
-msgid ""
-"The item will be removed from the panel and its configuration will be lost."
+msgid "The item will be removed from the panel and its configuration will be lost."
 msgstr "Öğe panelden silinecek ve ayarları kaybedilecek."
 
 #. configure, hide by default
@@ -371,7 +371,7 @@ msgstr "24'lük _saat sistemi kullan"
 
 #: ../plugins/clock/clock-dialog.c:427
 msgid "Fl_ash time separators"
-msgstr ""
+msgstr "Zaman ayraçlarını _parlat"
 
 #: ../plugins/clock/clock-dialog.c:433
 msgid "Sho_w AM/PM"
@@ -617,18 +617,16 @@ msgstr "Bu ekranda zaten çalışan bir sistem çekmecesi var"
 #. message
 #: ../plugins/systray/xfce-tray-plugin.c:219
 msgid "The tray manager lost selection"
-msgstr ""
+msgstr "Sistem çekmece yöneticisi seçimi kaybetti"
 
 #: ../plugins/systray/xfce-tray-dialogs.c:280
-#, fuzzy
 msgid "Are you sure you want to clear the list of known applications?"
-msgstr "'%s' çalışma alanını silmek istediğinizden emin misiniz?"
+msgstr "Bilinen uygulama listesini temizlemek istediğinizden emin misiniz?"
 
 #. number of rows
 #: ../plugins/systray/xfce-tray-dialogs.c:374
-#, fuzzy
 msgid "_Number of rows:"
-msgstr "Satır sayısı:"
+msgstr "Satır s_ayısı:"
 
 #. applications
 #: ../plugins/systray/xfce-tray-dialogs.c:389
@@ -821,5 +819,3 @@ msgstr "Kullanılabilir masaüstlerinin listesini göster"
 msgid "Xfce 4 Panel Manager"
 msgstr "Xfce 4 Panel Yöneticisi"
 
-#~ msgid "Failed to register the system tray for screen %d"
-#~ msgstr "%d ekranı için sistem çekmecesi kaydedilemedi"
