Translations added and updated for most trunk packages (gl)
(Old svn revision: 27155)

--- a/po/gl.po
+++ b/po/gl.po
@@ -1,7 +1,12 @@
-# Galician translation for xfce4-panel
-# Copyright (c) (c) 2006 Canonical Ltd, and Rosetta Contributors 2006
-# This file is distributed under the same license as the xfce4-panel package.
+# Galician translation of xfce4-panel
+# Copyright (C) 2008 Leandro Regueiro
+# This file is distributed under the same license as the xfce package.
+#
 # Ricardo Domínguez Rouco <riklaren@gmail.com>, 2006.
+# Leandro Regueiro <leandro.regueiro@gmail.com>, 2008.
+#
+# Proxecto Trasno - Adaptación do software libre á lingua galega:  Se desexas
+# colaborar connosco, podes atopar máis información en <http://trasno.net>
 #
 msgid ""
 msgstr ""
@@ -9,11 +14,12 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-12-12 12:57+0100\n"
 "PO-Revision-Date: 2006-06-06 12:38+0000\n"
-"Last-Translator: Ricardo Domínguez Rouco <riklaren@gmail.com>\n"
-"Language-Team: Galician <gl@li.org>\n"
+"Last-Translator: Leandro Regueiro <leandro DOT regueiro AT gmail DOT com>\n"
+"Language-Team: Galician <proxecto@trasno.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n!=1);\n"
 
 #: ../config/launcher-7.rc.in.h:1
 #, fuzzy
