--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -4,14 +4,15 @@
 # Rodrigo Coacci <rcoacci@gmail.com>, 2004.
 # Adriano Winter Bess <awbess@gmail.com>, 2006.
 # Og Maciel <ogmaciel@gnome.org>, 2008.
+# Fábio Nogueira <deb-user-ba@ubuntu.com>, 2008.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel 4.4.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-12-12 12:57+0100\n"
-"PO-Revision-Date: 2008-04-21 22:29-0500\n"
-"Last-Translator: Og Maciel <ogmaciel@gnome.org>\n"
+"PO-Revision-Date: 2008-07-21 22:20-0300\n"
+"Last-Translator: Fábio Nogueira <deb-user-ba@ubuntu.com>\n"
 "Language-Team: Brazilian Portuguese <xfce-i18n@xfce.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
@@ -19,7 +20,7 @@ msgstr ""
 
 #: ../config/launcher-7.rc.in.h:1
 msgid "Command Prompt"
-msgstr "Prompt de Comandos"
+msgstr "Prompt de comandos"
 
 #: ../config/launcher-7.rc.in.h:2
 msgid "X terminal emulator"
@@ -35,7 +36,7 @@ msgstr "Editor"
 
 #: ../config/launcher-9.rc.in.h:1
 msgid "File Manager"
-msgstr "Gerenciador de Arquivos"
+msgstr "Gerenciador de arquivos"
 
 #: ../config/launcher-9.rc.in.h:2
 msgid "Manage files and folders"
@@ -85,17 +86,17 @@ msgstr "Remover"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:902
 msgid "Add New Item"
-msgstr "Adicionar Novo Item"
+msgstr "Adicionar novo item"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:913
 #: ../panel/panel.c:694
 #: ../mcs-plugin/xfce4-panel-manager.desktop.in.h:1
 msgid "Customize Panel"
-msgstr "Personalizar o Painel"
+msgstr "Personalizar o painel"
 
 #: ../panel/panel.c:705
 msgid "Add Items"
-msgstr "Adicionar Itens"
+msgstr "Adicionar itens"
 
 #: ../panel/panel.c:721
 #: ../plugins/actions/actions.c:286
@@ -110,12 +111,12 @@ msgstr "Reiniciar"
 
 #: ../panel/panel.c:745
 msgid "About the Xfce Panel"
-msgstr "Sobre o Painel do Xfce"
+msgstr "Sobre o painel do Xfce"
 
 #: ../panel/panel-app.c:258
 #: ../panel/panel-app.c:892
 msgid "Exit Xfce Panel?"
-msgstr "Terminar o Painel do Xfce?"
+msgstr "Sair do painel do Xfce?"
 
 #: ../panel/panel-app.c:890
 #: ../panel/panel-app.c:922
@@ -125,12 +126,12 @@ msgstr "Painel Xfce"
 
 #: ../panel/panel-app.c:893
 msgid "You can't remove the last panel. Would you like to exit the program?"
-msgstr "Você não pode remover o último painel. Você gostaria de terminar o programa?"
+msgstr "Você não pode remover o último painel. Você gostaria de sair do programa?"
 
 #: ../panel/panel-app.c:920
 #, c-format
 msgid "Remove Panel \"%d\"?"
-msgstr "Remover o Painel \"%d\"?"
+msgstr "Remover o painel \"%d\"?"
 
 #: ../panel/panel-app.c:924
 msgid "The selected panel and all its items will be removed."
@@ -188,12 +189,12 @@ msgstr "Por favor reporte problemas para <%s>."
 
 #: ../panel/main.c:148
 msgid "xfce4-panel already running"
-msgstr "xfce4-panel já esta rodando"
+msgstr "O xfce4-panel já esta rodando"
 
 #. restart
 #: ../panel/main.c:160
 msgid "Restarting xfce4-panel..."
-msgstr "Reiniciando xfce4-panel"
+msgstr "Reiniciando xfce4-panel..."
 
 #: ../panel/panel-dialogs.c:189
 #, c-format
@@ -202,7 +203,7 @@ msgstr "Não foi possível abrir o módulo \"%s\""
 
 #: ../panel/panel-dialogs.c:634
 msgid "Add Items to the Panel"
-msgstr "Adicionar Itens ao Painel"
+msgstr "Adicionar itens ao painel"
 
 #: ../panel/panel-dialogs.c:665
 msgid "Drag items from the list to a panel or remove them by dragging them back to the list."
@@ -210,32 +211,32 @@ msgstr "Arraste itens da lista para um painel ou remova-os arrastando de volta p
 
 #: ../panel/panel-dialogs.c:682
 msgid "Available Items"
-msgstr "Itens Disponíveis"
+msgstr "Itens disponíveis"
 
 #: ../panel/panel-dialogs.c:908
 #: ../panel/panel-dialogs.c:1144
 msgid "Normal Width"
-msgstr "Largura Normal"
+msgstr "Largura normal"
 
 #: ../panel/panel-dialogs.c:909
 #: ../panel/panel-dialogs.c:1145
 msgid "Full Width"
-msgstr "Largura Total"
+msgstr "Largura total"
 
 #: ../panel/panel-dialogs.c:913
 #: ../panel/panel-dialogs.c:1149
 msgid "Normal Height"
-msgstr "Altura Normal"
+msgstr "Altura normal"
 
 #: ../panel/panel-dialogs.c:914
 #: ../panel/panel-dialogs.c:1150
 msgid "Full Height"
-msgstr "Altura Total"
+msgstr "Altura total"
 
 #: ../panel/panel-dialogs.c:922
 #: ../panel/panel-dialogs.c:1159
 msgid "Span Monitors"
-msgstr "Estender-se nos Monitores"
+msgstr "Estender-se nos monitores"
 
 #: ../panel/panel-dialogs.c:985
 #: ../panel/panel-dialogs.c:1224
@@ -272,11 +273,11 @@ msgstr "Posição"
 
 #: ../panel/panel-dialogs.c:1038
 msgid "Fixed Position"
-msgstr "Posição Fixa"
+msgstr "Posição fixa"
 
 #: ../panel/panel-dialogs.c:1044
 msgid "Freely Moveable"
-msgstr "Movimentar Livremente"
+msgstr "Movimentar livremente"
 
 #: ../panel/panel-dialogs.c:1167
 msgid "Auto_hide"
@@ -307,7 +308,7 @@ msgstr "Dos dois lados"
 
 #: ../panel/panel-dialogs.c:1300
 msgid "Select Monitor"
-msgstr "Selecione o Monitor"
+msgstr "Selecione o monitor"
 
 #. appearance settings
 #. appearance
@@ -349,16 +350,16 @@ msgstr "Painel %d"
 
 #: ../panel/panel-dialogs.c:1643
 msgid "Remove Panel"
-msgstr "Remover Painel"
+msgstr "Remover painel"
 
 #: ../panel/panel-dialogs.c:1656
 msgid "New Panel"
-msgstr "Novo Painel"
+msgstr "Novo painel"
 
 #: ../panel/panel-dialogs.c:1716
 #: ../mcs-plugin/xfce4-panel-manager.desktop.in.h:2
 msgid "Panel Manager"
-msgstr "Gerenciador do Painel"
+msgstr "Gerenciador do painel"
 
 #: ../plugins/actions/actions.c:267
 #: ../plugins/actions/actions.c:303
@@ -368,7 +369,7 @@ msgstr "Travar tela"
 
 #: ../plugins/actions/actions.c:419
 msgid "Panel Actions"
-msgstr "Ações do Painel"
+msgstr "Ações do painel"
 
 #: ../plugins/actions/actions.c:449
 msgid "Select action type:"
@@ -438,20 +439,20 @@ msgstr "Formato da dica de ferramenta"
 #. clock settings
 #: ../plugins/clock/clock-dialog.c:553
 msgid "Clock Options"
-msgstr "Opções do Relógio"
+msgstr "Opções do relógio"
 
 #: ../plugins/iconbox/iconbox.c:910
 #: ../plugins/iconbox/iconbox.desktop.in.in.h:1
 msgid "Icon Box"
-msgstr "Caixa de Ícones"
+msgstr "Caixa de ícones"
 
 #: ../plugins/iconbox/iconbox.c:935
 msgid "Only show minimized applications"
-msgstr "Mostrar apenas aplicações minimizadas"
+msgstr "Mostrar apenas aplicativos minimizados"
 
 #: ../plugins/iconbox/iconbox.c:944
 msgid "Show applications of all workspaces"
-msgstr "Mostrar programas de todas as áreas de trabalho"
+msgstr "Mostrar aplicativos de todas as áreas de trabalho"
 
 #: ../plugins/iconbox/iconbox.c:952
 #: ../plugins/tasklist/tasklist-dialogs.c:187
@@ -463,7 +464,7 @@ msgstr "Usar todo o espaço disponível"
 #: ../plugins/launcher/launcher.c:700
 #: ../plugins/launcher/launcher.c:760
 msgid "New Item"
-msgstr "Novo Item"
+msgstr "Novo item"
 
 #: ../plugins/launcher/launcher-exec.c:526
 #, c-format
@@ -476,19 +477,19 @@ msgstr "Sem ícone"
 
 #: ../plugins/launcher/launcher-dialog.c:597
 msgid "Select a Directory"
-msgstr "Selecione um Diretório"
+msgstr "Selecione um diretório"
 
 #: ../plugins/launcher/launcher-dialog.c:641
 msgid "Select an Application"
-msgstr "Selecione uma Aplicação"
+msgstr "Selecione um aplicativo"
 
 #: ../plugins/launcher/launcher-dialog.c:651
 msgid "All Files"
-msgstr "Todos Arquivos"
+msgstr "Todos arquivos"
 
 #: ../plugins/launcher/launcher-dialog.c:656
 msgid "Executable Files"
-msgstr "Arquivos Executáveis"
+msgstr "Arquivos executáveis"
 
 #: ../plugins/launcher/launcher-dialog.c:671
 msgid "Perl Scripts"
@@ -532,7 +533,7 @@ msgstr "_Descrição"
 
 #: ../plugins/launcher/launcher-dialog.c:1157
 msgid "_Icon"
-msgstr "Ca_ixa de Ícones"
+msgstr "Ca_ixa de ícones"
 
 #: ../plugins/launcher/launcher-dialog.c:1175
 msgid "Co_mmand"
@@ -540,7 +541,7 @@ msgstr "Co_mando"
 
 #: ../plugins/launcher/launcher-dialog.c:1202
 msgid "_Working Directory"
-msgstr "_Diretório de Trabalho"
+msgstr "_Diretório de trabalho"
 
 #: ../plugins/launcher/launcher-dialog.c:1234
 msgid "Run in _terminal"
@@ -632,7 +633,7 @@ msgstr "Esconder janelas e mostrar o ambiente de trabalho"
 #: ../plugins/systray/xfce-tray-dialogs.c:333
 #: ../plugins/systray/systray.desktop.in.in.h:2
 msgid "System Tray"
-msgstr "Área de Notificação"
+msgstr "Área de notificação"
 
 #: ../plugins/systray/xfce-tray-plugin.c:98
 msgid "There is already a system tray running on this screen"
@@ -645,7 +646,7 @@ msgstr "O gerenciador da bandeja perdeu a seleção"
 
 #: ../plugins/systray/xfce-tray-dialogs.c:280
 msgid "Are you sure you want to clear the list of known applications?"
-msgstr "Você tem certeza que deseja limpar a lista de aplicações conhecidas?"
+msgstr "Você tem certeza que deseja limpar a lista de aplicativos conhecidos?"
 
 #. number of rows
 #: ../plugins/systray/xfce-tray-dialogs.c:374
@@ -655,7 +656,7 @@ msgstr "_Número de filas:"
 #. applications
 #: ../plugins/systray/xfce-tray-dialogs.c:389
 msgid "Hidden Applications"
-msgstr "Aplicações ocultas"
+msgstr "Aplicativos ocultos"
 
 #: ../plugins/systray/xfce-tray-manager.c:431
 #, c-format
@@ -666,7 +667,7 @@ msgstr "Falha ao obter a seleção do gerenciador para a tela %d"
 #: ../plugins/tasklist/tasklist-dialogs.c:209
 #: ../plugins/tasklist/tasklist.desktop.in.in.h:2
 msgid "Task List"
-msgstr "Lista de Tarefas"
+msgstr "Lista de tarefas"
 
 #: ../plugins/tasklist/tasklist-dialogs.c:174
 msgid "Minimum Width:"
@@ -705,12 +706,12 @@ msgstr "Você tem certeza que deseja remover a área de trabalho %d?"
 #: ../plugins/windowlist/windowlist.c:264
 #, c-format
 msgid "Are you sure you want to remove workspace '%s'?"
-msgstr "Você tem certeza que deseja remover a área de trabalho '%s'?"
+msgstr "Você tem certeza que deseja remover o espaço de trabalho \"%s\"?"
 
 #: ../plugins/windowlist/windowlist.c:477
 #, c-format
 msgid "Workspace %d"
-msgstr "Área de Trabalho %d"
+msgstr "Área de trabalho %d"
 
 #: ../plugins/windowlist/windowlist.c:592
 #: ../plugins/windowlist/windowlist.c:598
@@ -720,28 +721,28 @@ msgstr "Adicionar área de trabalho"
 #: ../plugins/windowlist/windowlist.c:617
 #, c-format
 msgid "Remove Workspace %d"
-msgstr "Remover a Área de Trabalho %d"
+msgstr "Remover a área de trabalho %d"
 
 #: ../plugins/windowlist/windowlist.c:618
 #, c-format
 msgid "Remove Workspace '%s'"
-msgstr "Remover a Área de Trabalho '%s'"
+msgstr "Remover a área de trabalho \"%s\""
 
 #. Windowlist Settings
 #: ../plugins/windowlist/windowlist-dialog.c:121
 #: ../plugins/windowlist/windowlist-dialog.c:212
 #: ../plugins/windowlist/windowlist.desktop.in.in.h:2
 msgid "Window List"
-msgstr "Lista de Janelas"
+msgstr "Lista de janelas"
 
 #: ../plugins/windowlist/windowlist-dialog.c:150
 msgid "<i>Urgency notification</i> will blink the button when an application needs attention."
-msgstr "<i>Notificação de urgência</i> irá piscar o botão quando uma aplicação necessita de atenção."
+msgstr "<i>Notificação de urgência</i> irá piscar o botão quando um aplicativo necessita de atenção."
 
 #. Button Urgency Notification
 #: ../plugins/windowlist/windowlist-dialog.c:157
 msgid "Urgency Notification"
-msgstr "Notificação de Urgência"
+msgstr "Notificação de urgência"
 
 #: ../plugins/windowlist/windowlist-dialog.c:164
 msgid "_Disabled"
@@ -785,7 +786,7 @@ msgstr "Painel"
 
 #: ../plugins/actions/actions.desktop.in.in.h:1
 msgid "Action Buttons"
-msgstr "Botões de Ação"
+msgstr "Botões de ação"
 
 #: ../plugins/actions/actions.desktop.in.in.h:2
 msgid "Log out or lock the screen"
@@ -797,7 +798,7 @@ msgstr "Que horas são?"
 
 #: ../plugins/iconbox/iconbox.desktop.in.in.h:2
 msgid "Show icons of all running applications"
-msgstr "Mostrar ícones de todas as aplicações rodando"
+msgstr "Mostrar ícones de todos os aplicativos em execução"
 
 #: ../plugins/launcher/launcher.desktop.in.in.h:1
 msgid "Launcher"
@@ -817,11 +818,11 @@ msgstr "Adiciona um espaço ou uma linha entre itens no painel"
 
 #: ../plugins/showdesktop/showdesktop.desktop.in.in.h:1
 msgid "Show Desktop"
-msgstr "Mostrar o Ambiente de Trabalho"
+msgstr "Mostrar a área de trabalho"
 
 #: ../plugins/showdesktop/showdesktop.desktop.in.in.h:2
 msgid "Toggle desktop show/hide"
-msgstr "Alterna a visibilidade do ambiente de trabalho"
+msgstr "Alterna a visibilidade da área de trabalho"
 
 #: ../plugins/systray/systray.desktop.in.in.h:1
 msgid "Show notification icons"
@@ -829,7 +830,7 @@ msgstr "Mostra ícones de notificação"
 
 #: ../plugins/tasklist/tasklist.desktop.in.in.h:1
 msgid "Show all running applications"
-msgstr "Mostra todas as aplicações rodando"
+msgstr "Mostra todos os aplicativos em execução"
 
 #: ../plugins/windowlist/windowlist.desktop.in.in.h:1
 msgid "Show list of available windows"
@@ -837,7 +838,7 @@ msgstr "Mostrar lista de todas as janelas disponíveis"
 
 #: ../mcs-plugin/xfce4-panel-manager.desktop.in.h:3
 msgid "Xfce 4 Panel Manager"
-msgstr "Gerenciador do Painel do Xfce 4"
+msgstr "Gerenciador do painel do Xfce 4"
 
 #, fuzzy
 #~ msgid "Failed to register the system tray for screen %d"
