* Fix a bunch of compiler warnings. * Remove deprecated gtk_type_class. * Fix icon update hook in launcher, this is bothering me for a long time. * Install settings desktop file in $(datadir)/xfce4/settings-dialogs too. * Fix german typo: Bug 4066. * Fix dnd to launcher: Bug 3958.
(Old svn revision: 27412)

--- a/po/de.po
+++ b/po/de.po
@@ -811,7 +811,7 @@ msgstr "Arbeitsfläche anzeigen/verstecken"
 
 #: ../plugins/systray/systray.desktop.in.in.h:1
 msgid "Show notification icons"
-msgstr "Symbole für Benchrichtigungen anzeigen"
+msgstr "Symbole für Benachrichtigung anzeigen"
 
 #: ../plugins/tasklist/tasklist.desktop.in.in.h:1
 msgid "Show all running applications"
